<resources>
    <string name="app_name">StudentDocs</string>
    <string name="document_name">Название документа</string>
    <string name="document_category">Категория</string>
    <string name="photo">Фото</string>
    <string name="make_photo">Сделать фото</string>
    <string name="from_gallery">Из галереи</string>
    <string name="name">Название</string>
    <string name="change">Изменить</string>
    <string name="delete">Удалить</string>
    <string name="done">Готово</string>
    <string name="about_app">О приложении</string>
    <string name="used_memory">Объём хранимых данных</string>
    <string name="file_amount">Количество файлов</string>
    <string name="make_copy">Сделать резервную копию</string>
    <string name="delete_data">Удалить все данные</string>
    <string name="load_copy">Восстановить из резервной копии</string>
    <string name="developer">Разработчик: Владислав Стяжкин</string>
    <string name="app_description">Приложение для хранения документов</string>
    <string name="made_date">Создано 07.06.2020</string>

    <string-array name="categories">
        <item>Документы</item>
        <item>Справки</item>
        <item>Награды</item>
    </string-array>

    <string-array name="tab_titles">
        <item>Все</item>
        <item>Документы</item>
        <item>Справки</item>
        <item>Награды</item>
    </string-array>
</resources>